--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body {
   top: 0;
   right: 0;
   z-index: -1;
+  width: 27%;
 }
 
 .botBlob {
@@ -44,6 +45,7 @@ body {
   bottom: 0;
   left: 0;
   z-index: -1;
+  width: 19%;
 }
 
 button, select {
